# DuckTape

./: .gitignore  CDCTransforms.py  Comparison.md  DuckTape.py  Loaders.py  Metadata.py  README.md  SCD2-test.py  SQLUtils.py  pyproject.toml  requirements.txt
src/rtdi_ducktape/: CDCTransforms.py  Dataflow.py  LoaderDeltaLake.py  Loaders.py  Metadata.py  RowTransformations.py  SQLUtils.py
tests/: SCD2-test.py  deltalake-test.py  transform-test.py
