[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rtdi_ducktape"
version = "0.1.1"
authors = [
  { name="Werner Dähn", email="werner.daehn@rtdi.io" },
]
description = "Using DuckDB and Python as high speed ETL tool"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "Apache-2.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/rtdi/ducktape"
Issues = "https://github.com/rtdi/ducktape/issues"